Use dl in fixed header

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -2,8 +2,11 @@
 </head>
 <body>
 <div id="head">
-<span>Buzz word</span> <b id="word"></b>
-<br />
-<span>Buzz location</span> <b id="location"></b>
+<dl>
+<dt>Buzz word</dt>
+<dd id="word"> </dd>
+<dt>Buzz location</dt>
+<dd id="location"> </dd>
+</dl>
 </div>
 
