Add copy and reset buttons

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -8,5 +8,7 @@
 <dt>Buzz location</dt>
 <dd id="location"> </dd>
 </dl>
+<p><button id="copy" type="button"><b>Copy all buzz points</b></button></p>
+<p><button id="reset" type="reset">Clear all buzzes</button></p>
 </div>
 
