Redesign fixed header

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -2,13 +2,13 @@
 </head>
 <body>
 <div id="head">
-<dl>
-<dt>Buzz word</dt>
-<dd id="word"> </dd>
-<dt>Buzz location</dt>
-<dd id="location"> </dd>
-</dl>
-<p><button id="copy" type="button"><b>Copy all buzz points</b></button></p>
-<p><button id="reset" type="reset">Clear all buzzes</button></p>
+<p>
+<a href="index.php">&larr; List of packets</a>
+<span><button id="copy" type="button"><b>Copy all buzz points</b></button>
+<button id="reset" type="reset">Clear all buzzes</button></span>
+<label>Most recently clicked word:</label>
+<b id="location"></b>
+<span id="word"></span>
+</p>
 </div>
 
