Add link to r.html in fixed header

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -9,6 +9,7 @@
 <label>Most recently clicked word:</label>
 <b id="location"></b>
 <span id="word"></span>
+<a href="FILENAMER" class="fr" title="Try out an experimental version of this packet with pronunciation guides as supralinear annotations">★</a>
 </p>
 </div>
 
