Template: Naive changes to html due to node serializer

--- a/transformers/bottom.html
+++ b/transformers/bottom.html
@@ -1,5 +1,4 @@
 <script src="clipboard-polyfill.js"></script>
 <script src="findAndReplaceDOMText.js"></script>
 <script src="number.js"></script>
-</body>
-</html>
+</body></html>
