--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -1,9 +1,9 @@
-<link href="style.css" rel="stylesheet" />
+<link href="style.css" rel="stylesheet">
 </head>
 <body>
 <div id="head">
 <p>
-<a href="index.php">&larr; List of packets</a>
+<a href="index.php">← List of packets</a>
 <span><button id="copy" type="button"><b>Copy all buzz points</b></button>
 <button id="reset" type="reset">Clear all buzzes</button></span>
 <label>Most recently clicked word:</label>
