--- a/transformers/bottom.html
+++ b/transformers/bottom.html
@@ -2,5 +2,6 @@
 
 <script src="clipboard-polyfill.js"></script>
 <script src="number.js"></script>
+<script src="scroll.js"></script>
 <script src="load.js"></script>
 </body></html>
