--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -11,5 +11,6 @@
 <span id="word" class="text">none</span>
 </p>
 </div>
+<div id="toggle"></div><!-- TODO rename -->
 
 <main id="main" class="text">
