--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -8,8 +8,9 @@
 <button id="reset" type="reset">Clear all buzzes</button></span>
 <label>Most recently clicked word:</label>
 <b id="location"></b>
-<span id="word"></span>
+<span id="word" class="text"></span>
 <a href="FILENAMER" class="fr" title="Try out an experimental version of this packet with pronunciation guides as supralinear annotations">★</a>
 </p>
 </div>
 
+<main id="main" class="text">
