Semantic sectioning elements

--- a/transformers/bottom.html
+++ b/transformers/bottom.html
@@ -8,6 +8,7 @@
 		--><kbd>J</kbd>
 	</div>
 </footer>
+<div id="line">Previous scroll position</div>
 
 <script src="number.js"></script>
 <script src="scroll.js"></script>
