--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -1,7 +1,8 @@
 <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<div id="head">
+
+<header>
 <p>
 <a href="index.php">← List of packets</a>
 <span><button id="copy" type="button"><b>Copy all buzz points</b></button>
@@ -10,8 +11,6 @@
 <b id="location"></b>
 <span id="word" class="text">none</span>
 </p>
-</div>
-<div id="toggle"></div><!-- TODO rename -->
-<div id="line">Previous scroll position</div>
+</header>
 
 <main id="main" class="text">
