Scroll button: Move label to HTML

--- a/transformers/bottom.html
+++ b/transformers/bottom.html
@@ -1,5 +1,12 @@
 </main>
 
+<footer id="toggle" class="down"><!-- TODO rename -->
+	<div>
+		<span class="arr"><span class="up">↑</span><span class="down">↓</span></span><!--
+		--><span class="clm">Jump to the<br>next <span class="up">tossup</span><span class="down">bonus</span></span>
+	</div>
+</footer>
+
 <script src="clipboard-polyfill.js"></script>
 <script src="number.js"></script>
 <script src="scroll.js"></script>
