--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -3,14 +3,18 @@
 <body>
 
 <header>
-<p>
-<a href="index.php">← List of packets</a>
-<span><button id="copy" type="button"><b>Copy all buzz points</b></button>
-<button id="reset" type="reset">Clear all buzzes</button></span>
-<label>Most recently clicked word:</label>
-<b id="location"></b>
-<span id="word" class="text">none</span>
-</p>
+<nav>
+<ul>
+	<li><a href="index.php">← List of packets</a></li>
+	<li><button id="copy" type="button"><b>Copy all buzz points</b></button></li>
+	<li><button id="reset" type="reset">Clear all buzzes</button></li>
+	<li>
+		<label>Most recently clicked word:</label>
+		<b id="location"></b>
+		<span id="word" class="text">none</span>
+	</li>
+</ul>
+</nav>
 </header>
 
 <main id="main" class="text">
