Browser support: Clipboard for IE 9+ only

--- a/transformers/bottom.html
+++ b/transformers/bottom.html
@@ -9,8 +9,10 @@
 	</div>
 </footer>
 
-<script src="clipboard-polyfill.js"></script>
 <script src="number.js"></script>
 <script src="scroll.js"></script>
 <script src="load.js"></script>
+<!--[if gte IE 9]><!-->
+<script src="clipboard-polyfill.js"></script>
+<!--<![endif]-->
 </body></html>
