--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -8,7 +8,7 @@
 <button id="reset" type="reset">Clear all buzzes</button></span>
 <label>Most recently clicked word:</label>
 <b id="location"></b>
-<span id="word" class="text"></span>
+<span id="word" class="text">none</span>
 </p>
 </div>
 
