Scroll button: Shorter label

--- a/transformers/bottom.html
+++ b/transformers/bottom.html
@@ -3,7 +3,8 @@
 <footer id="toggle" class="down"><!-- TODO rename -->
 	<div>
 		<span class="arr"><span class="up">↑</span><span class="down">↓</span></span><!--
-		--><span class="clm">Jump to the<br>next <span class="up">tossup</span><span class="down">bonus</span></span>
+		--><span class="clm">Jump to<br>
+			<span class="up">tossups</span><span class="down">bonuses</span></span><!--
 	</div>
 </footer>
 
