Scroll button: Indicate keyboard shortcut

--- a/transformers/bottom.html
+++ b/transformers/bottom.html
@@ -5,6 +5,7 @@
 		<span class="arr"><span class="up">↑</span><span class="down">↓</span></span><!--
 		--><span class="clm">Jump to<br>
 			<span class="up">tossups</span><span class="down">bonuses</span></span><!--
+		--><kbd>J</kbd>
 	</div>
 </footer>
 
