--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -12,5 +12,6 @@
 </p>
 </div>
 <div id="toggle"></div><!-- TODO rename -->
+<div id="line">Previous scroll position</div>
 
 <main id="main" class="text">
