Header: Reword navigation labels

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -6,15 +6,15 @@
 <nav>
 <ul>
 	<li><label>Navigation</label><ul>
-		<li><a href="index.php">← List of packets</a></li>
+		<li><a href="./">←  Packets</a></li>
 	</ul></li>
-	<li><label>Most recently clicked word</label><ul>
-		<li><b id="location"></b></li>
+	<li><label>Last buzz point</label><ul>
 		<li><span id="word" class="text">none</span></li>
+		<li><span id="location"></span></li>
 	</ul></li>
 	<li><label>Buzz points</label><ul>
-		<li><a href="#" id="copy"><b>Copy all</b></a></li>
-		<li><a href="#" id="reset">Clear all</a></li>
+		<li><a href="#" id="copy"><b>Export</b></a></li>
+		<li><a href="#" id="reset">Reset</a></li>
 	</ul></li>
 </ul>
 </nav>
