Header: PG switcher

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -16,6 +16,23 @@
 		<li><a href="#" id="copy"><b>Export</b></a></li>
 		<li><a href="#" id="reset">Reset</a></li>
 	</ul></li>
+	--><li><label>Customize style</label>
+		<ul class="style-switcher">
+			<li><a href="#" class="pg-ruby" title="Ruby (supralinear annotations)">
+				<span class="text"><ruby><rb>word</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+			</a></li><!--
+			--><li><a href="#" class="pg-inline" title="Inline">
+				<span class="text"><ruby><rb>word</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+			</a></li><!--
+			--><li><a href="#" class="pg-hover" title="Hover">
+				<span class="text"><ruby><rb>hover</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+			</a></li>
+			<!-- <li><a href="#">Margin</a></li> -->
+
+			<!-- <li><a href="#">Smcp</a></li> -->
+			<!-- <li><a href="#">Nbsp</a></li> -->
+		</ul>
+	</li>
 </ul>
 </nav>
 </header>
