Header: New navigation bar styles

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -9,7 +9,7 @@
 		<li><a href="./">←  Packets</a></li>
 	</ul></li>
 	<li><label>Last buzz point</label><ul>
-		<li><span id="word" class="text">none</span></li>
+		<li><span id="wordparent"><span id="word" class="text">none</span></span></li>
 		<li><span id="location"></span></li>
 	</ul></li>
 	<li><label>Buzz points</label><ul>
