Header: Comments between inline blocks

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -7,15 +7,15 @@
 <ul>
 	<li><label>Navigation</label><ul>
 		<li><a href="./">←  Packets</a></li>
-	</ul></li>
-	<li><label>Last buzz point</label><ul>
-		<li><span id="wordparent"><span id="word" class="text">none</span></span></li>
-		<li><span id="location"></span></li>
-	</ul></li>
-	<li><label>Buzz points</label><ul>
-		<li><a href="#" id="copy"><b>Export</b></a></li>
-		<li><a href="#" id="reset">Reset</a></li>
-	</ul></li>
+	</ul></li><!--
+	--><li><label>Last buzz point</label><ul>
+		<li><span id="wordparent"><span id="word" class="text">none</span></span></li><!--
+		--><li><span id="location"></span></li>
+	</ul></li><!--
+	--><li><label>Buzz points</label><ul>
+		<li><a href="#" id="copy"><b>Export</b></a></li><!--
+		--><li><a href="#" id="reset">Reset</a></li>
+	</ul></li><!--
 	--><li><label>Customize style</label>
 		<ul class="style-switcher">
 			<li><a href="#" class="pg-ruby" title="Ruby (supralinear annotations)">
