Header: Add experimental PG styles

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -25,9 +25,15 @@
 			--><li><a href="#" class="pg-inline" title="Inline">
 				<span class="text"><ruby><rb>word</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
 			</a></li><!--
-			--><li><a href="#" class="pg-hover" title="Hover">
+			--><li><a href="#" class="pg-1" title="Inline box">
+				<span class="text"><ruby><rb>word</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+			</a></li><!--
+			--><li><a href="#" class="pg-3" title="Hover">
 				<span class="text"><ruby><rb>hover</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
-			</a></li>
+			</a></li><!--
+			--><!-- <li><a href="#" class="pg-hover" title="Hover">
+				<span class="text"><ruby><rb>hover</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+			</a></li> -->
 			<!-- <li><a href="#">Margin</a></li> -->
 
 			<!-- <li><a href="#">Smcp</a></li> -->
