--- a/transformers/top-1.html
+++ b/transformers/top-1.html
@@ -2,4 +2,5 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- original document styles, most of which are overridden -->
