--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -9,8 +9,8 @@
 		<li><a href="./">←  Packets</a></li>
 	</ul></li><!--
 	--><li><label>Last buzz point</label><ul>
-		<li><span id="wordparent"><span id="word" class="text">none</span></span></li><!--
-		--><li><span id="location"></span></li>
+		<li><span id="location">none</span></li><!--
+		--><li><span id="wordparent"><span id="word" class="text"></span></span></li>
 	</ul></li><!--
 	--><li><label>Buzz points</label><ul>
 		<li><a href="#" id="copy"><b>Export</b></a></li><!--
