Header: Add link to moderator instructions

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -6,7 +6,8 @@
 <nav>
 <ul>
 	<li><label>Navigation</label><ul>
-		<li><a href="./">←  Packets</a></li>
+		<li><a href="./">←  Packets</a></li><!--
+		--><li><a href="http://minkowski.space/quizbowl/instructions/scorekeeping/moderator.html">Instructions</a></li>
 	</ul></li><!--
 	--><li><label>Last buzz point</label><ul>
 		<li><span id="location">none</span></li><!--
