--- a/transformers/top-1.html
+++ b/transformers/top-1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Packet</title>
+
 <!-- original document styles, most of which are overridden -->
