Header: Add status indicator

--- a/transformers/top-2.html
+++ b/transformers/top-2.html
@@ -15,7 +15,8 @@
 	</ul></li><!--
 	--><li><label>Buzz points</label><ul>
 		<li><a href="#" id="copy"><b>Export</b></a></li><!--
-		--><li><a href="#" id="reset">Reset</a></li>
+		--><li><a href="#" id="reset">Reset</a></li><!--
+		--><li><span id="status">0 stored</span></li>
 	</ul></li><!--
 	--><li><label>Customize style</label>
 		<ul class="style-switcher">
