--- a/transformers/top-1.html
+++ b/transformers/top-1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://hypothes.is/embed.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-8654955-5"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
