Fancy: More work, initial styles

--- a/transformers/template.o.html
+++ b/transformers/template.o.html
@@ -46,10 +46,10 @@
 				<span class="text"><ruby><rb>word</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
 			</a></li><!--
 			--><li><a href="#" class="pg-respell" data-unclass="pg-ipa" title="Respelling">
-				<span class="text pg-ruby"><ruby><rb>respell</rb><rp> (&#x201C;</rp><rt><span class="respell">re-spell</span><span class="ipa">ɹi&thinsp;spɛɫ</span></rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+				<span class="text pg-ruby"><ruby><rb>default</rb><rp> (&#x201C;</rp><rt><span class="respell">ree-spelled</span><span class="ipa">ɹi&thinsp;spɛɫ</span></rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
 			</a></li><!--
 			--><li><a href="#" class="pg-ipa" data-unclass="pg-respell" title="IPA">
-				<span class="text pg-ruby"><ruby><rb>IPA</rb><rp> (&#x201C;</rp><rt><span class="respell">eye-P-A</span><span class="ipa">aɪ&thinsp;pi&thinsp;eɪ</span></rt><rp>&#x201D;)</rp></ruby> when available (experimental)</span>&nbsp;
+				<span class="text pg-ruby"><ruby><rb>IPA</rb><rp> (&#x201C;</rp><rt><span class="respell">eye-P-A</span><span class="ipa">aɪ&thinsp;pi&thinsp;eɪ</span></rt><rp>&#x201D;)</rp></ruby> (experimental)</span>&nbsp;
 			</a></li>
 		</ul>
 	</li>
