Fancy: Ready to include in bundle

--- a/transformers/template.o.html
+++ b/transformers/template.o.html
@@ -45,7 +45,7 @@
 			--><li><a href="#" class="pg-inline" data-unclass="pg-ruby" title="Inline">
 				<span class="text"><ruby><rb>word</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
 			</a></li><!--
-			--><li><a href="#" class="pg-respell" data-unclass="pg-ipa" title="Respelling">
+			--><li style="margin-left: 1.5em;"><a href="#" class="pg-respell" data-unclass="pg-ipa" title="Respelling">
 				<span class="text pg-ruby"><ruby><rb>default</rb><rp> (&#x201C;</rp><rt><span class="respell">ree-spelled</span><span class="ipa">ɹi&thinsp;spɛɫ</span></rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
 			</a></li><!--
 			--><li><a href="#" class="pg-ipa" data-unclass="pg-respell" title="IPA">
