IPA: Improve customize modal

--- a/transformers/template.o.html
+++ b/transformers/template.o.html
@@ -38,7 +38,7 @@
 		--><li><span id="status">0 stored</span></li>
 	</ul></li><!--
 	--><li><label>Interface</label><ul>
-		<li><a href="#style-switcher" onclick="document.getElementById('style-switcher').showModal();">Customize</a></li>
+		<li><a href="#style-switcher" id="customize">Customize</a></li>
 	</ul></li>
 </ul>
 </nav>
