IPA: Customize font switcher

--- a/transformers/template.o.html
+++ b/transformers/template.o.html
@@ -82,7 +82,7 @@
 			</div>
 		</section>
 		<section>
-			<h4>Flags (when IPA selected)</h4>
+			<h4>Flags (only with IPA)</h4>
 			<div class="btn-group">
 				<label class="pg-ipa pg-flag-hide">
 					<input type="radio" name="pg-flags" value="pg-flag-hide" data-unclass="pg-flag-show" />
@@ -94,6 +94,23 @@
 					<input type="radio" name="pg-flags" value="pg-flag-show" data-unclass="pg-flag-hide" checked="checked" />
 					<div>
 						<span class="text pg-ruby"><ruby><rb>show</rb><rp> (&#x201C;</rp><rt><span class="ipa"><span class="flag">🏁</span> ʃoʊ</span></rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+					</div>
+				</label>
+			</div>
+		</section>
+		<section>
+			<h4>IPA font</h4>
+			<div class="btn-group">
+				<label class="pg-ipa">
+					<input type="radio" name="pg-font" value="pg-brill" data-unclass="pg-minion" checked="checked" />
+					<div>
+						<span class="text pg-ruby"><ruby><rb>Brill</rb><rp> (&#x201C;</rp><rt><span class="ipa">ˈbɹɪl</span></rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+					</div>
+				</label>
+				<label class="pg-ipa pg-minion">
+					<input type="radio" name="pg-font" value="pg-minion" data-unclass="pg-brill" />
+					<div>
+						<span class="text pg-ruby"><ruby><rb>Minion</rb><rp> (&#x201C;</rp><rt><span class="ipa">ˈmɪn&#x2009;jən</span></rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
 					</div>
 				</label>
 			</div>
