IPA: Improve customize modal

--- a/transformers/template.o.html
+++ b/transformers/template.o.html
@@ -53,13 +53,13 @@
 				<label class="pg-inline" title="Inline">
 					<input type="radio" name="pg-pos" value="pg-inline" data-unclass="pg-ruby" />
 					<div>
-						<span class="text"><ruby><rb>word</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+						<span class="text"><ruby><rb>inline</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
 					</div>
 				</label>
 				<label class="pg-ruby" title="Ruby (supralinear annotations)">
 					<input type="radio" name="pg-pos" value="pg-ruby" data-unclass="pg-inline" checked="checked" />
 					<div>
-						<span class="text"><ruby><rb>word</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+						<span class="text"><ruby><rb>supralinear</rb><rp> (&#x201C;</rp><rt>guide</rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
 					</div>
 				</label>
 			</div>
@@ -117,10 +117,10 @@
 		</section>
 		<h3>Answerlines</h3>
 		<section>
-			<div class="btn-group">
+			<div class="btn-group"><p>
 				<button class="af-toggle" value="false">Collapse all</button> &nbsp; 
 				<button class="af-toggle" value="true">Expand all</button>
-			</div>
+			</p></div>
 		</section>
 	</form>
 </dialog>
