IPA: Tweak modal wording

--- a/transformers/template.o.html
+++ b/transformers/template.o.html
@@ -70,7 +70,7 @@
 				<label class="pg-respell">
 					<input type="radio" name="pg-orth" value="pg-respell" data-unclass="pg-ipa" checked="checked" />
 					<div>
-						<span class="text pg-ruby"><ruby><rb>respelled</rb><rp> (&#x201C;</rp><rt><span class="respell">ree-spelled</span><span class="ipa">ɹi&thinsp;spɛɫd</span></rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
+						<span class="text pg-ruby"><ruby><rb>respelling</rb><rp> (&#x201C;</rp><rt><span class="respell">ree-SPELL-ing</span><span class="ipa">ɹi&thinsp;spɛɫd</span></rt><rp>&#x201D;)</rp></ruby></span>&nbsp;
 					</div>
 				</label>
 				<label class="pg-ipa">
@@ -97,9 +97,10 @@
 					</div>
 				</label>
 			</div>
+			<p>Flags may not appear on Windows.</p>
 		</section>
 		<section>
-			<h4>IPA font</h4>
+			<h4>PG font (only with IPA)</h4>
 			<div class="btn-group">
 				<label class="pg-ipa">
 					<input type="radio" name="pg-font" value="pg-brill" data-unclass="pg-minion" checked="checked" />
